# McDevol

./: .gitignore  .gitmodules  CMakeLists.txt  NMF_components.py  NMF_components_trial.ipynb  README.md  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  add_shortercontigs.ipynb  assign_shortcontigs.py  bin_assignments.py  contigs_binning.py  contigs_clustering.py  contigs_clustering_modified.py  density_based_clustering.ipynb  density_based_clustering.py  dirichletpriors_kmercheck  distance_calculations.py  distance_calculations_source.py  get_sequence_bybin  get_sequence_bybin.cpp  getall_pairwise_dist_new.py  git_token  kmerfreq  kmerfreq.cpp  main.py  mcdevol.py  mcdevol_aebins_main.py  mcdevol_vae_main.py  metadevol.ipynb  metadevol.py  metadevol.sh  new_clustering_algorithm.ipynb  nmf_connected_components.py  nmf_connected_components_modified.py  optimize_parameters.py  optimize_parameters_md.py  requirements.txt  setup.sh  (+1 more)
.ipynb_checkpoints/: AIC_setregularization_strengths-checkpoint.ipynb  NMF_components-checkpoint.ipynb  NMF_components_trial-checkpoint.ipynb  UMAP for plot-checkpoint.ipynb  Untitled-1-checkpoint.ipynb  Untitled-checkpoint.ipynb  Untitled1-checkpoint.ipynb  Untitled2-checkpoint.ipynb  Untitled3-checkpoint.ipynb  kmer_distance-checkpoint.ipynb  metadevol-checkpoint.ipynb  new_clustering_algorithm-checkpoint.ipynb  umap_plots-checkpoint.ipynb
bam2counts/: bam2counts.cpp  bam2counts_old.cpp
doc/: AMBER_assessment_measures_explained.ipynb  amber_measures_explained.ipynb  camisim_metagenome_simulation_explained.ipynb
select_contigsbylength/: CMakeLists.txt  select_contigsby_length.cpp
src/: byol.py  byol_model.py  byol_onlyreads.py  connected_components.py  contigs_binning.py  contigs_binning_current.py  contigs_clustering.py  density_based_clustering.py  density_dv.ipynb  density_dv.py  mcdevol_autoencoder_augmented_both.py  (+5 more)
util/bam2counts/: CMakeLists.txt  bam2counts.cpp  build.sh
util/metadevol_distance/: CMakeLists.txt  pythonBinding.cpp
(+23 files in other folders)
